styling editing buttons and some spacing issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,6 +94,7 @@ nav {
 }
 header a {
     font-size: 125%;
+    padding: 0 15px;
 }
 
 main {
@@ -142,6 +143,7 @@ main {
 .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
+    padding: 15px 0;
 }
 
 .upvote-btn {
